include/wx/gtk/dirdlg.h
@@ -42,6 +42,11 @@ public:     // overrides from wxGenericDirDialog
     void SetPath(const wxString& path);
 
 
+    // Implementation only.
+
+    void GTKOnAccept();
+    void GTKOnCancel();
+
 protected:
     // override this from wxTLW since the native
     // form doesn't have any m_wxwindow
@@ -51,10 +56,9 @@ protected:
 
 
 private:
-    void OnFakeOk( wxCommandEvent &event );
+    wxString m_selectedDirectory;
 
     DECLARE_DYNAMIC_CLASS(wxDirDialog)
-    DECLARE_EVENT_TABLE()
 };
 
 #endif // __GTKDIRDLGH__
